Added some GoFish rules and a event for the game hub

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -90,7 +90,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MyHub.cs" />
+    <Compile Include="GameHub.cs" />
     <Compile Include="ServerForm.cs">
       <SubType>Form</SubType>
     </Compile>
